@startuml
'https://plantuml.com/class-diagram
scale 2

interface QuantumOperation

class Circuit
class Loop
class Gate


Circuit --|> QuantumOperation
Loop --|> QuantumOperation
Gate --|> QuantumOperation

class Circuit {
    nb_qbit:u8
    operations:QuantumOperation[]
}

class Loop {
    circuit:Circuit,
    end_of_loop:Predicate
}

class Gate {
    type:String,
    targets:u8[],
    controls:u8[]
}

@enduml